--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,7 +8,7 @@
   "customLinks": [
     {
       "id": "1728534585738",
-      "title": "📚 Libro del Ingreso + Anexos + Ejercicios",
+      "title": "📚 Libro de Ingreso + Anexos + Ejercicios",
       "url": "https://drive.google.com/drive/folders/1ceHA1-jRO3Dk-CnvWX9GzCdhEnzs01BK?usp=sharing"
     },
     {
@@ -18,8 +18,8 @@
     },
     {
       "id": "1728534585740",
-      "title": "🗓 Cronograma (1er Cuatri 2025)",
-      "url": "https://drive.google.com/drive/folders/1bVNoBuzRd-s_PV6oULXuSfEa5o5fp6hv?usp=sharing"
+      "title": "🗓 Cronograma",
+      "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
     }
   ]
 }
