--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,7 +8,7 @@
   "customLinks": [
     {
       "id": "1728534585740",
-      "title": "🗓 Cronograma",
+      "title": "🗓 Cronograma (2024)",
       "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
     },
     {
