--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -7,9 +7,9 @@
   "iconLinks": [],
   "customLinks": [
     {
-      "id": "1728534585740",
-      "title": "🗓 Cronograma (2024)",
-      "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
+      "id": "1728534585737",
+      "title": "🏫 Aula Virtual",
+      "url": "https://famaf.aulavirtual.unc.edu.ar/login/index.php"
     },
     {
       "id": "1728534585738",
@@ -20,6 +20,12 @@
       "id": "1728534585739",
       "title": "📜 Regularidad y Promoción",
       "url": "https://drive.google.com/drive/folders/1T44n9zPCh2yju-C_3Ls9Ncal_31FuVgG?usp=sharing"
+    },
+        {
+      "id": "1728534585740",
+      "title": "🗓 Cronograma (2024)",
+      "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
     }
   ]
 }
+
