--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,7 +8,7 @@
   "customLinks": [
     {
       "id": "1728534585737",
-      "title": "🏫 Aula Virtual",
+      "title": "🏫 Aula Virtual de FAMAF",
       "url": "https://famaf.aulavirtual.unc.edu.ar/login/index.php"
     },
     {
