--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -21,8 +21,13 @@
       "title": "📜 Regularidad y Promoción",
       "url": "https://drive.google.com/drive/folders/1T44n9zPCh2yju-C_3Ls9Ncal_31FuVgG?usp=sharing"
     },
-        {
+    {
       "id": "1728534585740",
+      "title": "💬 Grupos de Whatsapp",
+      "url": "https://chat.whatsapp.com/JQ4p6qwXp0tBj0MxIsAYV7"
+    }
+    {
+      "id": "1728534585741",
       "title": "🗓 Cronograma (2024)",
       "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
     }
