--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -13,7 +13,7 @@
     },
     {
       "id": "1728534585738",
-      "title": "📚 Libro del Ingreso + Anexos + Ejercicios",
+      "title": "📚 Libro de Ingreso + Anexos + Ejercicios",
       "url": "https://drive.google.com/drive/folders/1ceHA1-jRO3Dk-CnvWX9GzCdhEnzs01BK?usp=sharing"
     },
     {
