--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,23 +8,23 @@
   "customLinks": [
     {
       "id": "1728534585737",
-      "title": "🏫 Aula Virtual de FAMAF",
-      "url": "https://famaf.aulavirtual.unc.edu.ar/login/index.php"
-    },
-    {
-      "id": "1728534585738",
       "title": "📚 Libro de Ingreso + Anexos + Ejercicios",
       "url": "https://drive.google.com/drive/folders/1ceHA1-jRO3Dk-CnvWX9GzCdhEnzs01BK?usp=sharing"
     },
     {
+      "id": "1728534585738",
+      "title": "✍ Registro de Exámenes Viejos",
+      "url": "https://drive.google.com/drive/folders/1CTrSWHutVVF-bsydXtvEB_ZwGpI5_Cuk?usp=sharing"
+    },
+    {
       "id": "1728534585739",
-      "title": "📜 Regularidad y Promoción",
-      "url": "https://drive.google.com/drive/folders/1T44n9zPCh2yju-C_3Ls9Ncal_31FuVgG?usp=sharing"
+      "title": "💬 Grupos de Whatsapp",
+      "url": "https://chat.whatsapp.com/JQ4p6qwXp0tBj0MxIsAYV7"
     },
     {
       "id": "1728534585740",
-      "title": "💬 Grupos de Whatsapp",
-      "url": "https://chat.whatsapp.com/JQ4p6qwXp0tBj0MxIsAYV7"
+      "title": "📜 Regularidad y Promoción",
+      "url": "https://drive.google.com/drive/folders/1T44n9zPCh2yju-C_3Ls9Ncal_31FuVgG?usp=sharing"
     },
     {
       "id": "1728534585741",
