--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -30,6 +30,11 @@
       "id": "1728534585741",
       "title": "🗓 Cronograma (2024)",
       "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
+    },
+    {
+      "id": "1728534585742",
+      "title": "🧭 Mapa de Ciudad Universitaria",
+      "url": "https://estudiantes.internacionales.unc.edu.ar/wp-content/uploads/sites/42/2023/08/3.-MAPA-CIUDAD-UNIVERSITARIA-2023-1.pdf"
     }
   ]
 }
