--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -7,6 +7,11 @@
   "iconLinks": [],
   "customLinks": [
     {
+      "id": "1728534585736",
+      "title": "🏫 Aula Virtual de FAMAF",
+      "url": "https://famaf.aulavirtual.unc.edu.ar/login/index.php"
+    },
+    {
       "id": "1728534585737",
       "title": "📚 Libro de Ingreso + Anexos + Ejercicios",
       "url": "https://drive.google.com/drive/folders/1ceHA1-jRO3Dk-CnvWX9GzCdhEnzs01BK?usp=sharing"
@@ -22,20 +27,10 @@
       "url": "https://drive.google.com/drive/folders/1T44n9zPCh2yju-C_3Ls9Ncal_31FuVgG?usp=sharing"
     },
     {
-      "id": "1728534585740",
-      "title": "🗓 Cronograma (2024)",
-      "url": "https://drive.google.com/drive/folders/12bUpMcK9O4uk3IH0G-6E82XEqdJgz2aN?usp=sharing"
-    },
-    {
       "id": "1728534585741",
       "title": "💬 Grupos de Whatsapp",
       "url": "https://chat.whatsapp.com/JQ4p6qwXp0tBj0MxIsAYV7"
     },
-    {
-      "id": "1728534585742",
-      "title": "🧭 Mapa de Ciudad Universitaria",
-      "url": "https://estudiantes.internacionales.unc.edu.ar/wp-content/uploads/sites/42/2023/08/3.-MAPA-CIUDAD-UNIVERSITARIA-2023-1.pdf"
-    }
   ]
 }
 
